cargo-features = ["edition2024"]
package={name= 'image', version= '0.0.0', edition= '2024', rust-version='1.80'}
lib={path= 'lib.rs'}
[features]
type_alias_impl_trait=[]
slice_take=[]
const_trait_impl=[]
unstable=['type_alias_impl_trait','slice_take','const_trait_impl']
io = ['dep:image']
exr = ['dep:exr']
#median = ['dep:imageproc']

[dependencies]
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
bytemuck='*'
image={version='*', default-features=false, features=['png','jpeg'], optional=true}
exr={version='*', optional=true}
#imageproc={version='*', optional=true}