package={name='image', version='0.0.0', edition='2024'}
lib={path='lib.rs'}

[features]
type_alias_impl_trait=[]
slice_take=[]
const_trait_impl=[]
unstable=['type_alias_impl_trait','slice_take','const_trait_impl']
exr = ['dep:exr']

[dependencies]
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
bytemuck='*'
exr={version='*', optional=true}
