package={name='image', version='0.0.0', edition='2024'}
lib={path='lib.rs'}

[features]
type_alias_impl_trait=[]
slice_take=[]
const_trait_impl=[]
unstable=['type_alias_impl_trait','slice_take','const_trait_impl']
io = ['dep:image']
exr = ['dep:exr']

[dependencies]
bytemuck='*'
num={git='https://github.com/Matthias-Fauconneau/num'}
vector={git='https://github.com/Matthias-Fauconneau/vector'}
image={version='*', default-features=false, features=['png'], optional=true}
exr={version='*', optional=true}
